# self-adaptive-home-assistant

./: .gitignore  fix.sh  pyproject.toml
home-assistant/: main.py
improvement-agent/: main.py
resources/: audio.m4a  audio2.m4a
